@@ -395,17 +395,17 @@
       <run-at-start>false</run-at-start>
     </mobility>
     <mobility>
-      <_name>Simple OnScreen Keyboard</_name>
-      <executable>sok</executable>
-      <command>sok</command>
-      <icon-name>accessibility-keyboard-capplet</icon-name>
-      <run-at-start>false</run-at-start>
-    </mobility>
-    <mobility>
       <_name>Dasher</_name>
       <executable>dasher</executable>
       <command>dasher</command>
       <icon-name>gnome-searchtool</icon-name>
+      <run-at-start>false</run-at-start>
+    </mobility>
+    <mobility>
+      <name>onBoard</name>
+      <executable>onboard</executable>
+      <command>onboard</command>
+      <icon-name>onboard</icon-name>
       <run-at-start>false</run-at-start>
     </mobility>
   </a11y-mobility>
