@@ -1,3 +1,10 @@
+2007-12-06  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Chris Jones
+
+	* gnome-default-applications.xml.in: sok is now called onBoard (bug
+	#499328)
+
 2007-11-28  Jens Granseuer  <jensgr@gmx.net>
 
 	Based on patch by: Jakub Rusinek <liviopl.pl@gmail.com>
